# perfetto

./: .travis.yml  Android.bp  Android.bp.extras  BUILD  BUILD.extras  BUILD.gn  PRESUBMIT.py  README  groups  heapprofd.rc  project.config  query.sql
buildtools/: .gitignore  BUILD.gn
docs/: README.md  heapprofd.md
gn/: BUILD.gn  fuzzer.gni  perfetto.gni  protozero_library.gni
gn/standalone/: proto_library.gni
infra/git_mirror_bot/: mirror_aosp_to_ghub_repo.py
protos/: BUILD
src/android_internal/: atrace_hal.cc  atrace_hal.h
src/base/: fallthrough.h  no_destructor_unittest.cc  thread_task_runner.cc  thread_task_runner_unittest.cc
src/ipc/: BUILD.gn
src/perfetto_cmd/: BUILD.gn  activate_triggers.cc  activate_triggers.h  perfetto_cmd.cc  perfetto_cmd.h  perfetto_config.descriptor.h  platform_task_runner.h  rate_limiter.cc  rate_limiter.h  rate_limiter_unittest.cc  trigger_perfetto.cc
src/ppapi/: BUILD.gn  perfetto_api.cc
src/protozero/: BUILD.gn  proto_decoder.cc  proto_decoder_fuzzer.cc  proto_decoder_unittest.cc  proto_decoder_unittest.cc.orig
test/: end_to_end_integrationtest.cc  example_ppapi_integration.cc  test_helper.cc  test_helper.h
tools/: diff_test_trace_processor.py  gen_all  gen_amalgamated  gen_android_bp  gen_binary_descriptors  gen_binary_descriptors.gni  gen_build  gen_merged_protos  gen_merged_sql_metrics  gen_merged_sql_metrics.py  gen_tracing_cpp_headers_from_protos  heap_profile  install-build-deps  load_tool  tmux  traceconv  update_traceconv
tools/busy_threads/: busy_threads.cc
tools/dump_ftrace_stats/: main.cc
tools/proto_to_cpp/: proto_to_cpp.cc
tools/protoprofile/: BUILD.gn  main.cc
tools/trace_to_text/: trace_to_profile.cc  trace_to_systrace.cc  trace_to_text.cc
ui/: index.html
(+296 files in other folders)
